# chess-variants

./: .gitignore  CMakeLists.txt  Chess_Game.xlsx  Chess_Pieces.docx  Doxyfile  README.md  compile_commands.json
include/SDL_image/: SDL_image.h
resources/images/: example.pimg
resources/piecedata/: king.piece
resources/pieces/: knight.pc
src/: main.cc
src/chess/: chess.hh  chessGame.cc  chessGame.hh  gridSquare.cc  gridSquare.hh  king.cc  king.hh  piece.cc  piece.hh  piece_factory.cc  piece_factory.hh  piece_images.hh
src/io/: piece_file.cc  piece_file.hh
src/sdl_wrapper/: colors.hh  context.cc  context.hh  sdl_context.cc  sdl_context.hh  sdl_exception.cc  sdl_exception.hh  sdl_video_context.cc  sdl_video_context.hh
src/sdl_wrapper/audio/: sample_format.cc  sample_format.hh
src/sdl_wrapper/image/: context.cc  context.hh  image.cc  image.hh  img_exception.cc  img_exception.hh
src/sdl_wrapper/io/: rwops.cc  rwops.hh
src/sdl_wrapper/mixer/: context.cc  context.hh  init_flags.hh  mix_exception.cc  mix_exception.hh  mixer.hh  mixer_spec.cc  mixer_spec.hh
src/sdl_wrapper/primitives/: point.cc  point.hh
src/sdl_wrapper/render/: renderer.cc  renderer.hh  renderer_builder.cc  renderer_builder.hh  texture.cc  texture.hh  weak_renderer.cc  weak_renderer.hh  weak_texture.cc  weak_texture.hh
src/sdl_wrapper/surface/: surface.cc  surface.hh  weak_surface.cc  weak_surface.hh
src/sdl_wrapper/video/: context.cc  context.hh  video.cc  video.hh  weak_window.cc  weak_window.hh  window.cc  window.hh  window_builder.cc  (+1 more)
src/util/: util.cc  util.hh
(+6 files in other folders)
